--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -41,16 +41,15 @@
                 margin-right: 1rem;
             }
 
-            &:hover {
-                .sub-menu {
-                    display: block;
-                }
-            }
+            // &:hover {
+            //     .sub-menu {
+            //         display: block;
+            //     }
+            // }
         }
     }
 
     .sub-menu {
-        // display: block;
         display: none;
         position: absolute;
         top: 100%;
