--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -41,11 +41,11 @@
                 margin-right: 1rem;
             }
 
-            // &:hover {
-            //     .sub-menu {
-            //         display: block;
-            //     }
-            // }
+            &:hover {
+                .sub-menu {
+                    @include submenuAnimation(4);
+                }
+            }
         }
     }
 
@@ -60,6 +60,9 @@
         .sub-menu__item {
             margin-top: .8rem;
             height: 3.6rem;
+            opacity: 0;
         }
+
+
     }
 }
